<resources>
    <string name="app_name">Team08StoryApp</string>
    <string name="edit_menu">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="story_welcome">Team 08 Story Book App!</string>
    <string name="read_online">Read Online Stories</string>
    <string name="read_download">Read Downloaded Stories</string>
    <string name="my_stories">My Stories</string>
    <string name="search_hint">Search Title or Author…</string>
    <string name="title_activity_online_stories">Online Stories</string>
    <string name="title_activity_offline_stories">Offline Stories</string>
    <string name="title_activity_story_view">StoryFragmentActivity</string>
    <string name="read_menu">Read</string>
    <string name="download_menu">Download</string>
    <string name="publish_menu">Publish</string>
    <string name="picture">Picture</string>
    <string name="select_intro">Long-press a thumbnail to add an illustration</string>
    <string name="show_intro">Press a thumbnail to display at larger size</string>
    <string name="camera_des">Image Vary</string>
    <string name="get_photo">get photo</string>
    <string name="title_activity_my_stories">My Stories</string>
    <string name="title_activity_online_story_fragment">OnlineStoryFragmentActivity</string>
    <string name="title_activity_my_story_fragment">MyStoryFragmentActivity</string>
    <string name="title_activity_annotation_view">AnnotationViewActivity</string>
    <string name="title_activity_new_story">Create a New Story</string>
    <string name="title_activity_edit_fragment">Edit Fragment</string>
    <string name="title_activity_edit_choice">Edit Choice</string>
    <string name="title_activity_select_fragment">Story Fragments</string>
    <string name="title_activity_story_fragment_list">StoryFragmentListActivity</string>
    <string name="gallery_image">Default gallery image</string>
    <string name="enter_the_text_for_your_choice_">Enter the text for your choice.</string>
    <string name="choice_text">Choice Text:</string>
    <string name="link_choice_to_fragment">Link Next Story Fragment</string>
    <string name="save">Save</string>
    <string name="create_new_story">Create New Story</string>
    <string name="title_">Title:</string>
    <string name="enter_new_story_title_here">Enter new story title here</string>
    <string name="author_">Author:</string>
    <string name="enter_author_apos_s_name_here">Enter author\'s name here</string>
    <string name="search">Search</string>
    <string name="select_a_fragment_to_link_to_">Select Story Fragment to Link:</string>
    <string name="create_fragment">Create Story Fragment</string>
    <string name="view_annotations">View Annotations</string>
    <string name="add_annotations">Add Annotations</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
    <string name="textview">TextView</string>
    <string name="from_camera">From Camera</string>
    <string name="from_gallery">From Gallery</string>
    <string name="add_illustration_camera_">Add illustration (Camera)</string>
    <string name="add_illustration_gallery_">Add illustration (Gallery)</string>
    <string name="add_choice">Add Choice</string>
    <string name="create_a_story">Create a Story</string>
    <string name="search_">Search&#8230;</string>
    <string name="illustration_from_camera">Illustration from Camera</string>
    <string name="illustration_from_gallery">Illustration from Gallery</string>
    <string name="title_activity_view_fragments">ViewFragmentsActivity</string>
    <string name="luckyButton">I\'m Feeling Lucky!</string>
    <string name="the_linked_fragment_id_is_">"The linked Story Fragment id is: "</string>
    <string name="help_menu">Help</string>
    <string name="okayButton">Okay</string>
    <string name="main_menu">Main Menu</string>
    <string name="create_a_new_story">Create a New Story</string>
    <string name="downloaded_stories">Downloaded Stories</string>
    <string name="online_stories">Online Stories</string>
    <string name="enter_text_for_dialogue">Enter text for dialogue</string>
    <string name="random_choice_checkbox">Random Choice</string>
    <string name="button_RandomChoice">Random Choice</string>
    <string name="sync_notice">Sync </string>
    <string name="random_choice_check">Make it a random choice?</string>
    <string name="annotation_help_title">Annotation Help</string>
    <string name="annotation_help_text">&lt;b>Viewing Annotations&lt;/b>&lt;br>Swipe down/up on the screen to scroll through the annotations.&lt;br>&lt;br>&lt;b>Back Button&lt;/b>&lt;br>Click to return to the Story.</string>
    <string name="edit_story_fragment_help_title">Edit Story Fragment Help</string>
    <string name="edit_story_fragment_help_text">&lt;b&gt;Action Bar Options&lt;/b&gt;&lt;br&gt;These are found at the top of the screen next to the title and consist of the following:&lt;br&gt;\t• &lt;b&gt;View Annotations&lt;/b&gt; - This is the icon that looks like a little picture. Click it to go to the annotation screen where you can view user annotations.&lt;br&gt;&lt;br&gt;\t• &lt;b&gt;Add Annotations&lt;/b&gt; - This is the icon that looks like a little camera. Click it to add annotation from either taking a picture with the phones camera or picking one from the phones gallery.&lt;br&gt;&lt;br&gt;\t• &lt;b&gt;Return to Main Menu&lt;/b&gt; - This is located in the drop down menu and will return you to the main menu screen.&lt;br&gt;&lt;br&gt;&lt;b&gt;Illustration Gallery&lt;/b&gt;&lt;br&gt;This is the top gallery in the Story Fragment where the Author can add illustrations that compliment the parts of the Story contained within the current Story Fragment. To add an illustration see the Action Bar Options.&lt;br&gt;&lt;br&gt;&lt;b&gt;Story Fragment Text&lt;/b&gt;&lt;br&gt;This is the area between the Illustration Gallery and Choices. This text is the body of the Story for this particular Story Fragment. Click into this area and start type the body of the Story that should go in this Story Fragment.&lt;br&gt;&lt;br&gt;&lt;b&gt;Choices&lt;/b&gt;&lt;br&gt;These are the choices the reader has to chose from that will lead them to the next part of the Story. To add a choice see the Action Bar Options.&lt;br&gt;&lt;br&gt;&lt;b&gt;Random Choice Checkbox&lt;/b&gt;&lt;br&gt;Check this checkbox to allow for a random choice to be chosen while reading this particular Story Fragment.&lt;br&gt;</string>
    <string name="edit_choice_help_title">Edit Choice Help</string>
    <string name="edit_choice_help_text">&lt;b>Choice Text&lt;/b>&lt;br>Write in the box the statement that should be displayed to the reader when deciding on a choice to chose.&lt;br>&lt;br>&lt;b>\"Link Next Story Fragment\" Button&lt;/b>&lt;br>Click this button to chose a Story Fragment to link the choice to.&lt;br>&lt;br>&lt;b>Save Button&lt;/b>&lt;br>Click this button to save the choice and return to the Editing/Creating the Story Fragment.&lt;br></string>
    <string name="main_menu_help_title">Main Menu Help</string>
    <string name="main_menu_help_text">&lt;B>Read Online Stories Button&lt;/B>&lt;br>Click to display the list of Stories available to read from the online webservice.&lt;br>&lt;br>&lt;B>Read Downloaded Stories Button&lt;/B>&lt;br>Click to display the list of Stories available to read that are local stored on the device.&lt;br>&lt;br>&lt;B>My Stories Button&lt;/B>&lt;br>Click to display the list of Stories you are creating.&lt;br></string>
    <string name="my_stories_help_title">My Stories Help</string>
    <string name="my_stories_help_text">&lt;&lt;&lt;b>Action Bar Options&lt;/b>&lt;br>These are found at the top of the screen next to the title and consist of the following:&lt;br>&lt;br>\t• &lt;b>Return to Main Menu&lt;/b> - This is located in the drop down menu and will return you to the main menu screen.&lt;br>&lt;br>&lt;b>Search Function&lt;/b>&lt;br>Finds stories where the title or author contain the text entered into the search area.&lt;br>&lt;br>&lt;b>List of Stories &lt;/b>&lt;br>Displays all stories created by the author or the created stories resulting from the search.&lt;br>&lt;br>By long pressing on a story in the list, a popup menu appears with the following options:&lt;br>\t• &lt;b>Publish&lt;/b> - Select this will publish the story online for all users to read.&lt;br>&lt;br>\t• &lt;b>Read&lt;/b> - Select this to start reading the Story.&lt;br>&lt;br>\t• &lt;b>Edit&lt;/b> - Select this to edit the Story. This will display the list of Story Fragments that make up the Story for editing.&lt;br>&lt;br>&lt;b>Create New Story Button&lt;/b>&lt;br>Click this to start creating a new Story.&lt;br></string>
    <string name="new_story_help_title">New Story Help</string>
    <string name="new_story_help_text">&lt;b>Action Bar Options&lt;/b>&lt;br>These are found at the top of the screen next to the title and consist of the following:&lt;br>&lt;br>\t• &lt;b>Return to Main Menu&lt;/b> - This is located in the drop down menu and will return you to the main menu screen.&lt;br>&lt;br>&lt;b>Title Text&lt;/b>&lt;br>Write the Title of the new Story in this box.&lt;br>&lt;br>&lt;b>Author Text&lt;/b>&lt;br>Write the Author of the new Story in this box.&lt;br>&lt;br>&lt;b>Save Button&lt;/b>&lt;br>Click this to save the Title and Author of the Story and move to creating the first Story Fragment.&lt;br></string>
    <string name="downloaded_stories_help_title">Downloaded Stories Help</string>
    <string name="online_stories_help_title">Online Stories Help</string>
    <string name="online_stories_help_text">&lt;b>Action Bar Options&lt;/b>&lt;br>These are found at the top of the screen next to the title and consist of the following:&lt;br>&lt;br>\t• &lt;b>Return to Main Menu&lt;/b> - This is located in the drop down menu and will return you to the main menu screen.&lt;br>&lt;br>&lt;b>Search Function&lt;/b>&lt;br>Finds stories where the title or author contain the text entered into the search area.&lt;br>&lt;br>&lt;b>List of Stories &lt;/b>&lt;br>Displays all stories stored online or the stories resulting from the search.&lt;br>&lt;br>By long pressing on a story in the list, a popup menu appears with the following options:&lt;br>\t• &lt;b>Download&lt;/b> - Select this to download the Story to the devices local memory.&lt;br>\t• &lt;b>Read&lt;/b> - Select this to start reading the Story.&lt;br>&lt;br>&lt;b>\"I\'m Feeling Lucky\" Button&lt;/b>&lt;br>Click to pick a story at random to start reading.&lt;br></string>
    <string name="selecting_story_fragment_title">Selecting Story Fragment Help</string>
    <string name="selecting_story_fragment_text">&lt;b>List of the Story\'s Story Fragments&lt;/b>&lt;br>Displays the list of the current Story\'s Story Fragments to the user for linking to a choice, except the Story Fragment the Choice is being added to.&lt;br>&lt;br>Selecting a Story Fragment from the list will link it to the Choice and return you to the Edit/Add Choice screen.&lt;br></string>
    <string name="story_reading_help_title">Story Reading Help</string>
    <string name="story_fragment_list_help_title">Story Fragment List Help</string>
    <string name="story_fragment_list_help_text">&lt;b>Action Bar Options&lt;/b>&lt;br>These are found at the top of the screen next to the title and consist of the following:&lt;br>&lt;br>\t• &lt;b>Return to Main Menu&lt;/b> - This is located in the drop down menu and will return you to the main menu screen.&lt;br>&lt;br>&lt;b>List of the Story\'s Story Fragments &lt;/b>&lt;br>Displays the list of the current Story\'s Story Fragments.&lt;br>&lt;br>Selecting a Story Fragment will lead to the Edit Story Fragment screen where it can be edited.&lt;br>&lt;br>&lt;b>Create Story Fragment Button&lt;/b>&lt;br>Click this to start creating a Story Fragment for use in the Story.&lt;br></string>
    <string name="choices_">Choices:</string>
</resources>