<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/view_annotations"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="ifRoom"
        android:title="@string/view_annotations"/>
    <item
        android:id="@+id/action_add_annotations"
        android:icon="@android:drawable/ic_menu_camera"
        android:showAsAction="ifRoom"
        android:title="@string/add_annotations"/>
    <item
        android:id="@+id/action_mainmenu"
        android:showAsAction="never"
        android:title="@string/return_to_main_menu"/>
    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/help_menu"/>

</menu>