<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewStoryActivity" >

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enterAuthor"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="22dp"
        android:text="@string/title_" />

    <EditText
        android:id="@+id/enterTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/titleText"
        android:layout_toRightOf="@id/titleText"
        android:hint="@string/enter_new_story_title_here" />

    <TextView
        android:id="@+id/authorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="58dp"
        android:text="@string/author_" />

    <EditText
        android:id="@+id/enterAuthor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/authorText"
        android:layout_toRightOf="@id/authorText"
        android:hint="@string/enter_author_apos_s_name_here" />

 
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/enterAuthor"
        android:text="@string/save" 
        android:onClick="toEditFragmentActivity"/>

</RelativeLayout>